--- a/public/styles/partials/forms.css
+++ b/public/styles/partials/forms.css
@@ -1,7 +1,7 @@
 
-.select-block lable,
-.input-block lable,
-.textarea-block lable {
+.select-block label,
+.input-block label,
+.textarea-block label {
     font-size: 1.4rem;
     color: var(--color-text-complement);
 }
@@ -14,7 +14,7 @@
     margin-top: 0.8rem;
     border-radius: 0.8rem;
     background: var(--color-input-background);
-    border: 1pc solid var(--color-line-in-white);
+    border: 1px solid var(--color-line-in-white);
     outline: 0;
     padding: 0 1.6rem;
     font: 1.6rem Archivo;
@@ -38,7 +38,7 @@
     background: var(--color-primary-light);
     position: absolute;
     left: 1.6rem;
-    right:1.6rem;
+    right: 1.6rem;
     bottom: 0;
 }
 
