--- a/public/styles/partials/header.css
+++ b/public/styles/partials/header.css
@@ -1,4 +1,3 @@
-
 .page-header {
     background-color: var(--color-primary);
     display: flex;
@@ -11,7 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1.6rem 0
+    padding: 1.6rem 0;
 }
 
 .page-header .top-bar-container a {
@@ -42,7 +41,7 @@
 .page-header .header-content p {
     max-width: 30rem;
     font-size: 1.6rem;
-    line-height:2.6rem;
+    line-height: 2.6rem;
     color: var(--color-title-in-primary);
     margin-top: 2.4rem;
 }
